# plink86_decoder

./: README.md
rtlink_decode/: CMakeLists.txt  rtlink_decode.cpp  variation3.cpp
